tests/paczka1/small_fuzzy/55454227.err
Error in line 1: ctdCpQdNrp A57 73,33
Error in line 3: ctdCpQdNrp A57 202,3
Error in line 4: TNhDEyRk A57 44,6
Error in line 7: TNhDEyRk A45 66,2
